--- a/lesson_04/css/fonts.css
+++ b/lesson_04/css/fonts.css
@@ -26,7 +26,7 @@
 /* Fonts iMuch */
 @font-face {
   font-family: iMuch;
-  src: url("../fonts/iMuch/iMuch Light.woff2"), format("woff2");
+  src: url("../fonts/iMuch/iMuch-Light.woff2"), format("woff2");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -34,7 +34,7 @@
 
 @font-face {
   font-family: iMuch;
-  src: url("../fonts/iMuch/iMuch Regular.woff2"), format("woff2");
+  src: url("../fonts/iMuch/iMuch-Regular.woff2"), format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -42,7 +42,7 @@
 
 @font-face {
   font-family: iMuch;
-  src: url("../fonts/iMuch/iMuch Bold.woff2"), format("woff2");
+  src: url("../fonts/iMuch/iMuch-Bold.woff2"), format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
