--- a/lesson_05/css/style.css
+++ b/lesson_05/css/style.css
@@ -260,44 +260,41 @@
 .why-choose-us {
   margin: 0 auto;
   max-width: 1180px;
-  font-size: 0;
   padding: 80px 0;
+  font-family: Lato, sans-serif;
 }
 .title {
   text-align: center;
   color: #2f302c;
   font-size: 32px;
-  font-family: Lato, sans-serif;
   font-weight: 800;
   line-height: 1.2; /* 40/32 */
   text-transform: uppercase;
   margin-bottom: 70px;
 }
 .cards {
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -34px;
+  margin-right: -34px;
+  font-size: 0;
 }
 .card {
+  font-size: 16px;
   text-align: center;
   max-width: 33.33333%;
   display: inline-block;
   margin-bottom: 70px;
   vertical-align: top;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 34px;
+  padding-right: 34px;
 }
 
 .card img {
   margin-bottom: 30px;
 }
 
-.card h3 {
+.card .subtitle {
   margin-bottom: 25px;
-
   color: #2f302c;
-  font-size: 16px;
-  font-style: normal;
-  font-family: Lato, sans-serif;
   font-weight: 700;
   line-height: 1.2; /* 20px/16 */
   text-transform: uppercase;
@@ -305,9 +302,6 @@
 
 .card p {
   color: #7e7f7c;
-  font-size: 16px;
-  font-style: normal;
-  font-family: "Lato", sans-serif;
   font-weight: 500;
   line-height: 1.2; /* 20px/16 */
 }
