--- a/lesson_10/css/style.css
+++ b/lesson_10/css/style.css
@@ -141,13 +141,11 @@
 .section-face {
   text-align: center;
   padding-bottom: 66px;
+  font-family: "Playfair Display", serif;
 }
 .section-face__title {
   color: #000;
   font-size: 20px;
-  font-family: "Playfair Display", serif;
-  font-weight: 400;
-  line-height: normal;
   text-align: center;
   margin-bottom: 48px;
 }
@@ -164,7 +162,17 @@
   padding-left: 62px;
   padding-right: 62px;
   position: relative;
+  cursor: pointer;
 }
+/* .section-face__item {
+  display: inline-block;
+  max-width: 33.3333333%;
+  width: calc(100% - 124px);
+  text-align: center;
+  padding: 0px 15px;
+  position: relative;
+} */
+
 .section-face__item::before {
   content: "";
   position: absolute;
@@ -192,33 +200,30 @@
 }
 .section-face__label {
   position: absolute;
-  top: 133px;
-  left: 125.5px;
+  top: 50%;
+  transform: translate(0%, -50%);
+  width: calc(100% - 124px);
+  text-align: center;
+  padding: 0px 15px;
   color: #fff;
   font-size: 28px;
-  font-style: normal;
-  font-family: "Playfair Display", serif;
-  font-weight: 400;
-  line-height: normal;
 }
-.section-face__link {
+.section-face__btn {
   position: absolute;
-  bottom: 12px;
-  left: 160px;
+  bottom: 3.8%;
+  transform: translate(0%, -3.8%);
+  width: calc(100% - 124px);
+  text-align: center;
+  padding: 0px 15px;
   color: #fff;
   font-size: 17px;
-  font-style: normal;
-  font-family: "Playfair Display", serif;
-  font-weight: 400;
-  line-height: normal;
+  display: block;
+  background-color: transparent;
+  cursor: pointer;
 }
 .section-face__button {
   color: #000;
   font-size: 14px;
-  font-style: normal;
-  font-family: "Playfair Display", serif;
-  font-weight: 400;
-  line-height: normal;
   border: 1px solid #000;
   padding: 10px 50px;
 }
